<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/intro_img_contentDescription"
                android:visibility="visible"
                app:srcCompat="@drawable/intro_logo" />

            <TextView
                android:id="@+id/intro_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textSize="31sp"/>

            <TextView
                android:id="@+id/intro_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_description"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="10dp"
                android:textAlignment="center"
                android:textColor="@color/grey"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/getStartedButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/purple_button_bg"
                android:textColor="@color/white"
                android:text="@string/intro_button"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/intro_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_signIn"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>