<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_welcomeBack"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:contentDescription="@string/home_searchIcon"
                    android:id="@+id/search_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    tools:srcCompat="@drawable/search_icon" />

                <ImageView
                    android:contentDescription="@string/home_notificationIcon"
                    android:id="@+id/bell_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    app:srcCompat="@drawable/bell_icon" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="16dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    app:dotsColor="@color/grey"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="6dp"
                    app:dotsSpacing="2dp"
                    app:dotsWidthFactor="2.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewPageSlider"
                    app:selectedDotColor="@color/purple"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_officialBrand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_officialBrand"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/officialBrand_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_seeAll"
                    android:textColor="@color/purple" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar_viewBrand"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/viewBrand"
                    app:layout_constraintEnd_toEndOf="@+id/viewBrand"
                    app:layout_constraintStart_toStartOf="@+id/viewBrand"
                    app:layout_constraintTop_toTopOf="@+id/viewBrand" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/viewBrand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/home_recommendation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_recommendation"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recommendation_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_seeAll"
                    android:textColor="@color/purple" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar_viewRecommendation"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/viewRecommendation"
                    app:layout_constraintEnd_toEndOf="@+id/viewRecommendation"
                    app:layout_constraintStart_toStartOf="@+id/viewRecommendation"
                    app:layout_constraintTop_toTopOf="@+id/viewRecommendation" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/viewRecommendation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@drawable/purple_button_bg"
            >

            <LinearLayout
                android:baselineAligned="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/menu_Explorer"
                        android:id="@+id/menuExplorer"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        tools:srcCompat="@drawable/btn_1" />

                    <TextView
                        android:id="@+id/menu_explorer_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_Explorer"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/menu_Cart"
                        android:id="@+id/menuCart"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        tools:srcCompat="@drawable/btn_2" />

                    <TextView
                        android:id="@+id/menu_cart_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_Cart"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/menu_Favourite"
                        android:id="@+id/menuFavourite"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        tools:srcCompat="@drawable/btn_3" />

                    <TextView
                        android:id="@+id/menu_favourite_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_Favourite"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/menu_Checklist"
                        android:id="@+id/menu_checklist"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        tools:srcCompat="@drawable/btn_4" />

                    <TextView
                        android:id="@+id/menu_checklist_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_Checklist"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/menu_Profile"
                        android:id="@+id/menuProfile"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        tools:srcCompat="@drawable/btn_5" />

                    <TextView
                        android:id="@+id/menu_profile_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_Profile"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>